# drone-rid-receiver

./: .dockerignore  .env.example  .gitignore  LICENSE  PLAN.md  README.md  build_exe.bat  check_env.bat  check_env.py  docker-compose.yml  launcher.bat  launcher.ps1  logging_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  run_gui.bat  scan_dji.bat  scan_drone.bat  scan_drone.py  scan_wifi.py  setup-server.sh  setup_and_run.bat  vite.config.js  wsgi.py
app/: cli.py  edge_backhaul.py  edge_pipeline.py  edge_receiver.py  gui_launcher.py  headless.py  mqtt_consumer.py  server.py  web.py
app/server/: __init__.py  api_heartbeat.py  api_report.py  api_status.py  api_trajectory.py  api_web.py  auth.py  cert_manager.py  dashboard.py  geocode.py  models.py  tile_server.py
app/server/static/css/: reset.css
app/server/static/js/: api.js  base-entry.js  chart-utils.js  dashboard-entry.js  map-entry.js  map-utils.js  region-data.js  ui.js  vendor.js
config/: config.yaml  power_lines.yaml  stations.yaml  web_users.yaml
core/: airspace.py  alert.py  anti_flapping.py  backhaul.py  beidou.py  bootstrap.py  cloud_alert.py  config.py  coords.py  live_feed.py  mqtt_client.py  pilot_notify.py  pipeline.py  powerline.py  raw_archive.py  service_common.py  sms_gateway.py  trajectory.py  webhook_notifier.py
core/parser/: __init__.py  astm.py  base.py  gb46750.py  types.py
data/: region_index.json
deploy/docker/: .dockerignore  Dockerfile  gunicorn.conf.py
deploy/k8s/: configmap.yaml  emqx-configmap.yaml  emqx-service.yaml  emqx-statefulset.yaml  ingress.yaml  kustomization.yaml  mqtt-consumer-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  secret.yaml  server-deployment.yaml  server-service.yaml
deploy/nginx/: init-letsencrypt.sh  nginx.conf.template
deploy/systemd/: drone-backhaul.service  drone-pipeline.service  drone-receiver.service
display/: terminal.py
display/gui/: window.py
edge-lua/: fact.lua  rid_receiver.lua  userapp.lua
receiver/: ble.py  serial.py  serial_scanner.py  simulated.py  wifi.py
reference/: Untitled-5.txt  mqtt-audit-backlog.md
reference/rid_deliverables/rid_deliverables/: 8812au_mod.ko  README.md  fix_vermagic.py  fix_vermagic2.py  rid_fix.py
reference/rsb4221-rid-receiver-v0.7/rsb4221-rid-receiver-v0.7/: README.md
reference/rsb4221-rid-receiver-v0.7/rsb4221-rid-receiver-v0.7/scripts/: start.sh  start_rid.sh
reference/rsb4221-rid-receiver-v0.7/rsb4221-rid-receiver-v0.7/src/: __init__.py  init_lines.py  minimal_serial.py  rid_launcher.py  rid_serial_receiver.py  rid_wifi_scanner.py  test.py
scripts/: build_region_index.py  download_geojson.py
src/: __init__.py  alert.py  db.py  display.py  main.py  main_gui.py  main_web.py  rid_parser.py  rid_receiver.py  trajectory.py  wifi_receiver.py
src/gui/: __init__.py  main_window.py  powerline_dialog.py
storage/: database.py
templates/: base.html  dashboard.html  login.html  map.html  register.html
tests/: conftest.py  locustfile.py  test_api_integration.py  test_powerline.py  test_protocols.py  test_sdrtu_consumer.py  test_system.py
tools/: download_tiles.py  sdrtu_forwarder.lua
